<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">爱抽屉</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">搜索</string>
    <string name="title_activity_base">爱抽屉</string>
    <string name="title_activity_my_table">我的抽屉</string>
    <string name="mission">任务　Mission</string>
    <string name="share">分享　Share</string>
    <string name="news">消息　News</string>
    <string name="setting">设置　Setting</string>
    <string name="help">帮助　Help</string>
    <string name="title_activity_login">爱抽屉</string>
    <string name="login_btn">登录</string>
    <string name="save_phoneNumber">记住密码</string>
    <string name="save_login_state">自动登录</string>
    <string name="login_password">请输入登录密码</string>
    <string name="photoNumber">手机号码：</string>
    <string name="QQ">QQ:</string>
    <string name="QQNumber">请留下您的QQ，以方便工作人员联系。</string>
    <string name="password">登录密码：</string>
    <string name="oldpassword">输入旧密码：</string>
    <string name="newpassword">输入新密码：</string>
    <string name="againpassword">确认新密码：</string>
    <string name="plese_photoNumber">请输入手机号码</string>
    <string name="plese_password">请输入新密码</string>
    <string name="plese_againpassword">请再次输入新密码</string>
    <string name="check_oldpsd">旧密码必须是6-20位</string>
    <string name="check_bothpsw">两次新密码输入不一致</string>
    <string name="qq_login_btn">QQ账号登录</string>
    <string name="fogive_password">忘记密码?</string>
    <string name="reset_user">新用户注册</string>
    <string name="TestGetCode">获取语音验证码</string>
    <string name="input_code">请输入验证码</string>
    <string name="ckeckcode">验证码：</string>
    <string name="register_complete">完成！开启奇妙旅程</string>
    <string name="userinfo_score">积分</string>
    <string name="userinfo_title">个人信息</string>
    <string name="select_title">场景模版</string>
    <string name="userinfo_name">昵称</string>
    <string name="userinfo_phone">手机号</string>
    <string name="userinfo_email">Email</string>
    <string name="userinfo_drawerNum">抽屉号</string>
    <string name="userinfo_welcome">邀请码</string>
    <string name="userinfo_logout">退出登录</string>
    <string name="userinfo_compile">编辑信息</string>
    <string name="setting_title">设置</string>
    <string name="frends_title">旮旯</string>
    <string name="costPoint_title">积分清单</string>
    <string name="message_title">消息</string>
    <string name="advice_title">意见反馈</string>
    <string name="setting_costpoint">积分清单</string>
    <string name="setting_safe">账户与安全</string>
    <string name="modifypw">修改账户密码</string>
    <string name="setting_clear">清除缓存</string>
    <string name="setting_advice">意见反馈</string>
    <string name="setting_about">关于我们</string>
    <string name="setting_guide">新手引导</string>
    <string name="scan_title">一拍即存</string>
    <string name="scan_label">扫描二维码</string>
    <string name="scan_prompt_label">将二维码放入方框中即可扫描</string>
    <string name="scan_failed_prompt">二维码扫描失败</string>
    <string name="scan_local">从相册选取二维码</string>
    <string name="userInfo_name_null">姓名/昵称不能为空</string>
    <string name="userInfo_name_correct">请您正确输入姓名/昵称</string>
    <string name="userInfo_phone_null">请输入您的联系电话</string>
    <string name="userInfo_phone_correct">请您输入正确的联系电话</string>
    <string name="userInfo_email_null">请输入您的E-mail</string>
    <string name="userInfo_email_correct">请您输入正确E-mail</string>
    <string name="dialog_late">请稍后...</string>
    <string name="reminder">提示</string>
    <string name="modify_succes">修改成功</string>
    <string name="ensure">确定</string>
    <string name="nagtive">取消</string>
    <string name="loginSucces">登录成功</string>
    <string name="logining">登录中...</string>
    <string name="reset_text">*请勿填写过于简单的密码</string>
    <string name="reset_text1">如有任何解决不了的问题,请联系我们的工作人员</string>
    <string name="send_to">收件人:</string>
    <string name="send_from">署名:</string>
    <string name="title_activity_video_player">爱抽屉</string>
    <string name="title_activity_advice">爱抽屉</string>
    <string name="title_activity_cost_point">爱抽屉</string>
    <string name="title_activity_buy_point">爱抽屉</string>
    <string name="title_activity_message">爱抽屉</string>
    <string name="title_activity_quickmark">爱抽屉</string>
    <string name="title_activity_establish">爱抽屉</string>
    <string name="title_activity_buy_code">爱抽屉</string>
    <string name="title_activity_address">爱抽屉</string>
    <string name="title_activity_manager_address">爱抽屉</string>
    <string name="title_activity_default">爱抽屉</string>
    <string name="title_activity_frends">爱抽屉</string>
    <string name="share_text_activity_main">这款应用会让你的信息传递变得丰富、有趣和自由。</string>
    <string name="share_title_activity_main">爱抽屉，是一个交流方式</string>
    <string name="guide_title1_activity_main">请开启扬声器或佩戴耳机</string>
    <string name="guide_title2_activity_main">创建抽屉,让信息传递变得丰富自由</string>
    <string name="guide_title3_activity_main">管理自己的抽屉</string>
    <string name="score_activity_main">积分：</string>
    <string name="nickname_activity_main">昵称</string>
    <string name="point_activity_main">积分</string>
    <string name="chenk_new_app">发现新版本,是否更新?</string>
    <string name="again_exit">再按一次退出程序</string>
    <string name="share_success">分享成功</string>
    <string name="share_default">分享失败</string>
    <string name="share_nagvtive">分享取消</string>
    <string name="add_success">添加成功</string>
    <string name="check_add_person">请填写收件人</string>
    <string name="check_add_person_phone">请认真填写收件人联系电话</string>
    <string name="check_add_email">请填写邮政编码</string>
    <string name="check_add_address">请填写收件地址,以确保宝贝能送到您手中</string>
    <string name="check_add_deteal_address">请填写收件详细地址,以确保宝贝能快速送到您手中</string>
    <string name="permiss_defat">获取权限失败</string>
    <string name="chooese_sendto">请选择您发送的联系人</string>
    <string name="check_login1">您还未登录，请先登录。</string>
    <string name="check_qq">请正确输入QQ号码</string>
    <string name="check_advicetext">请输入反馈意见</string>
    <string name="check_adviceinput">输入内容不能少于6个字</string>
    <string name="advice_submit_success">您的意见已经提交成功。</string>
    <string name="please_chooese_audio">请选择您的音频文件文件</string>
    <string name="check_attach_num">附件数量不能超过9</string>
    <string name="qrqcode_doors1">《可爱小动物》</string>
    <string name="qrqcode_price1">4元/版(9枚)</string>
    <string name="qrqcode_doors2">《超级英雄》</string>
    <string name="qrqcode_price2">4元/版(9枚)</string>
    <string name="qrqcode_doors3">《极客星球》</string>
    <string name="qrqcode_price3">4元/版(9枚)</string>
    <string name="qrqcode_doors4">《手写版》</string>
    <string name="qrqcode_price4">4元/版(9枚)</string>
    <string name="qrqcode_doors5">《便签版》</string>
    <string name="qrqcode_price5">2元/版(10枚)</string>
    <string name="check_add_goods">请添加购买商品</string>
    <string name="pay_resulting">支付结果确认中</string>
    <string name="pay_result_defat">支付失败</string>
    <string name="check_weixin">检测到您未安装微信客户端或者版本较低</string>
    <string name="buy_point_num">请先选择购买积分数量</string>
    <string name="money_error">金额错误</string>
    <string name="buy_score_success">积分购买成功</string>
    <string name="buy_point_title1">充值80积分</string>
    <string name="buy_point_body1">充值8元赠送80积分</string>
    <string name="buy_point_title2">充值200积分</string>
    <string name="buy_point_body2">充值18元赠送200积分</string>
    <string name="buy_point_title3">充值350积分</string>
    <string name="buy_point_body3">充值28元赠送350积分</string>
    <string name="point_deteal">积分详情</string>
    <string name="nonelogin">账号未登录</string>
    <string name="delete_success">删除成功</string>
    <string name="setting_success">设置成功</string>
    <string name="getattaching">注：文件下载中</string>
    <string name="send">发送</string>
    <string name="check_telephonenumber">请正确输入有效号码</string>
    <string name="check_number">请输入您的手机号</string>
    <string name="getsms_code">正在获取短信验证码，请稍后...</string>
    <string name="reset_sms_code">正在注册，请稍后...</string>
    <string name="input_smscode">请输入验证码</string>
    <string name="input_passward">请输入密码</string>
    <string name="check_passward">密码必须是6-20位</string>
    <string name="again_passward">请输入重复密码</string>
    <string name="check_again_passward">两次密码输入不一致</string>
    <string name="again_send">重新发送</string>
    <string name="again_get">重新获取</string>
    <string name="please_getphone_code">请您接听来自021开头的验证电话</string>
    <string name="again_login">重置密码成功,请重新登录账号</string>
    <string name="jingxuan">精选</string>
    <string name="faxian">发现</string>
    <string name="wait_open">即将开启</string>
    <string name="gala">旮旯</string>
    <string name="check_attachs_num">最多只能添加9个附件</string>
    <string name="completes">完成</string>
    <string name="huizhi_passward">请绘制手势密码</string>
    <string name="shoushi_passward_enter">手势密码正确</string>
    <string name="huizhi_new_passward">手势密码正确,请绘制新手势密码</string>
    <string name="shoushi_passward_error">手势密码错误</string>
    <string name="huizhi_again_passward">请再次绘制手势密码</string>
    <string name="not_same_passward">两次手势密码不相同，请重新绘制！</string>
    <string name="shoushi_set_defalt">设置失败，重新绘制！</string>
    <string name="longin_ing">正在登录，请稍后...</string>
    <string name="impower_nagative">授权已取消</string>
    <string name="impower_default">授权失败</string>
    <string name="sign">签到</string>
    <string name="com_ziliao">完善资料</string>
    <string name="everyday_sign">每日签到</string>
    <string name="completion_of_task">任务完成</string>
    <string name="already_signed_in">已签到</string>
    <string name="daily_share">每日分享</string>
    <string name="share_the_failure">分享失败</string>
    <string name="share_to_cancel">分享取消</string>
    <string name="limit_video_time">视频录制时间不能少于3秒</string>
    <string name="limit_video_primiss">无法获取摄像头权限,请检查是否已打开摄像头权限!</string>
    <string name="choose">选择</string>
    <string name="nagative">取消</string>
    <string name="no_delete_object">无删除对象</string>
    <string name="nickname">姓名/昵称不能为空</string>
    <string name="mdf_psw_success">密码修改成功</string>
    <string name="from_file_images">从相册选取</string>
    <string name="from_file_creamer">拍照</string>
    <string name="sent">已发送</string>
    <string name="wait_sent">待发送</string>
    <string name="local">本地</string>
    <string name="collect">收藏</string>
    <string name="disbursements">实付款:￥</string>
    <string name="new_add_address">请添加收货地址</string>
    <string name="pay_result">支付结果确认中</string>
    <string name="payment_failed">支付失败</string>
    <string name="yuan">元</string>
    <string name="qr_code_to_buy">二维码购买</string>
    <string name="pay_qr_success">支付成功,感谢您的惠顾，我们将在一个工作日内寄出</string>
    <string name="wrong_amount">金额错误</string>
    <string name="check_drawer_null">抽屉信息为空，不能预览，请重试</string>
    <string name="qr_dialog_title1">二维码已成功生成，您可以在创建</string>
    <string name="qr_dialog_text1">完抽屉后将此二维码和朋友进行分享</string>
    <string name="qr_dialog_title2">二维码已成功生成，您可以保存在</string>
    <string name="qr_dialog_text2">本地并将此二维码和朋友进行分享</string>
    <string name="drawer_shop">抽屉小店挑选精美二维码</string>
    <string name="scanning_to_create">扫描创建</string>
    <string name="login_immediately">立即登录</string>
    <string name="registration_failed">注册失败，请重试</string>
    <string name="registration_successful">注册成功</string>
    <string name="registrationing">正在注册，请稍后...</string>
    <string name="open_gesture_lock">开启手势锁</string>
    <string name="close_gesture_lock">关闭手势锁</string>
    <string name="none_gesture_psd">没有设置密码，请设置密码</string>
    <string name="remind_the_class_template">提醒类模板</string>
    <string name="blessing_of_class_template">祝福类模板</string>
    <string name="emergency_class_template">应急类模板</string>
    <string name="love_class_template">表白类模板</string>
    <string name="inform_the_class_template">通知类模板</string>
    <string name="weixin">微信</string>
    <string name="weixi_frends">朋友圈</string>
    <string name="myphone">电话</string>
    <string name="mysms">短信</string>
    <string name="myemail">Email</string>
</resources>