<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">

    <LinearLayout
        android:id="@+id/way_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="80px"
        android:paddingLeft="80px"
        android:paddingBottom="20px"
        android:background="@drawable/send_bacselect"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/item1"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/way_wechatselect"
            android:gravity="center"
            android:textColor="@color/gray"
            android:text="@string/weixin"/>

        <TextView
            android:id="@+id/item2"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:drawableTop="@drawable/way_frendsselect"
            android:textColor="@color/gray"
            android:text="@string/weixi_frends"/>

        <TextView
            android:id="@+id/item3"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/way_phoneselect"
            android:gravity="center"
            android:textColor="@color/gray"
            android:text="@string/myphone"/>

        <TextView
            android:id="@+id/item4"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/way_smsselect"
            android:gravity="center"
            android:textColor="@color/gray"
            android:text="@string/mysms"/>

        <TextView
            android:id="@+id/item5"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/way_emailselect"
            android:gravity="center"
            android:textColor="@color/gray"
            android:text="@string/myemail"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/edt_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <com.example.user.contactlist.view.ChooseWayEditView
            android:id="@+id/sendWay_sms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="80px"
            android:paddingLeft="80px"/>

        <com.example.user.contactlist.view.ChooseWayEditView
            android:id="@+id/sendWay_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="80px"
            android:paddingLeft="80px"/>

        <com.example.user.contactlist.view.ChooseWayEditView
            android:id="@+id/sendWay_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="80px"
            android:paddingLeft="80px"/>


        <com.example.user.contactlist.view.SendInputView
            android:id="@+id/sendWay_weixin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:paddingRight="80px"
            android:paddingLeft="80px" />

        <com.example.user.contactlist.view.SendInputView
            android:id="@+id/sendWay_weixin_frends"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:paddingRight="80px"
            android:paddingLeft="80px" />
    </LinearLayout>
</LinearLayout>
